@@ -156,7 +156,7 @@ int check_crc_16(const uint8_t *buf, int n)
 }
 
 
-static const uint16_t crc_ccitt_table[256] = {
+const uint16_t crc_ccitt_table[256] = {
         0x0000, 0x1189, 0x2312, 0x329b, 0x4624, 0x57ad, 0x6536, 0x74bf,
         0x8c48, 0x9dc1, 0xaf5a, 0xbed3, 0xca6c, 0xdbe5, 0xe97e, 0xf8f7,
         0x1081, 0x0108, 0x3393, 0x221a, 0x56a5, 0x472c, 0x75b7, 0x643e,
